--- a/types.html
+++ b/types.html
@@ -6,7 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Varela+Round:400,600|Open+Sans:400,300,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="\site\css\css.css" rel="stylesheet">
+    <link href="css\css.css" rel="stylesheet">
 	<link rel="icon" href="https://favicon-generator.org/favicon-generator/htdocs/favicons/2014-11-22/af213d60ab5aed16b4cdf8e521146ec1.ico">
 
     <title>Types</title>
@@ -26,7 +26,7 @@
 		<center>
         <div id="cover" class="layout-">
             <div class="container">
-			<a href="index.html"><img style="height:30%;" src="\site\img\logo.png"/></a>
+			<a href="index.html"><img style="height:30%;" src="img\logo.png"/></a>
 			<span>
 			<br>
 			</span><br>
