--- a/types.html
+++ b/types.html
@@ -6,7 +6,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono|Varela+Round:400,600|Open+Sans:400,300,700" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="css\css.css" rel="stylesheet">
+    <link href="css.css" rel="stylesheet">
 	<link rel="icon" href="https://favicon-generator.org/favicon-generator/htdocs/favicons/2014-11-22/af213d60ab5aed16b4cdf8e521146ec1.ico">
 
     <title>Types</title>
@@ -31,6 +31,7 @@
 			<br>
 			</span><br>
                 <div class="contact">
+					<a href="index.html"><i class="fa fa-fire-extinguisher"></i><span>Home</span></a>
 					<a href="https://steamcommunity.com/profiles/76561199117652156/myworkshopfiles/"><i class="fab fa-steam-symbol"></i><span>Workshop</span></a>
 					<a href="https://discord.gg/tBqFQQh85s"><i class="fab fa-discord"></i><span>Discord</span></a>
 					<a href="https://www.youtube.com/channel/UCRq8TdYzxTKkcO_j6LLmFhg"><i class="fab fa-youtube"></i><span>Youtube</span></a>
