--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<center>
         <div id="cover" class="layout-">
             <div class="container">
-			<a href="index.html"><img style="height:30%;" src="img\logo.png"/></a>
+			<a href="index.html"><img style="height:30%;" src="img\logo.gif"/></a>
 			<span>
 			<br>
 			</span><br>
