--- a/index_uaz_ru.html
+++ b/index_uaz_ru.html
@@ -70,12 +70,14 @@
 						<hr>
 						<p>		
 							<div class="adaptivny-slayder">
-							  <input type="radio" name="kadoves" id="slaid1" checked>
+							  <input type="radio" name="kadoves" id="slaid1">
 							  <input type="radio" name="kadoves" id="slaid2">
 							  <input type="radio" name="kadoves" id="slaid3">
 							  <input type="radio" name="kadoves" id="slaid4">
 							  <input type="radio" name="kadoves" id="slaid5">
 							  <input type="radio" name="kadoves" id="slaid6">
+							  <input type="radio" name="kadoves" id="slaid7" checked>
+							  <input type="radio" name="kadoves" id="slaid8">
 							   
 							  <div class="kadoves">
 							  <label for="slaid1"></label>
@@ -84,6 +86,8 @@
 							  <label for="slaid4"></label>
 							  <label for="slaid5"></label>
 							  <label for="slaid6"></label>
+							  <label for="slaid7"></label>
+							  <label for="slaid8"></label>
 							  </div>
 							   
 							  <div class="adaptivny-slayder-lasekun">
@@ -94,6 +98,8 @@
 							  <img src="img\Uaz_4.png"/>
 							  <img src="img\Uaz_5.png"/>
 							  <img src="img\Uaz_6.png"/>
+							  <img src="img\Uaz_7.png"/>
+							  <img src="img\Uaz_8.png"/>
 							  </div>
 							  </div>
 							</div>
