--- a/index_ru.html
+++ b/index_ru.html
@@ -68,7 +68,7 @@
                         </div>
                     </a>
 					
-                    <a href="">
+                    <a href="index_Gaz66_ru.html">
                         <div class="article-preview">
 							<img class="fill" src="img\work2.png"/>
                             <div class="info">
