--- a/index_Gaz66_ru.html
+++ b/index_Gaz66_ru.html
@@ -92,12 +92,12 @@
 							   
 							  <div class="adaptivny-slayder-lasekun">
 							  <div class="abusteku-deagulus">
-							  <img src="img\Gaz66_2.png"/>
-							  <img src="img\Gaz66_1.png"/>
-							  <img src="img\Gaz66_3.png"/>
-							  <img src="img\Gaz66_4.png"/>
-							  <img src="img\Gaz66_5.png"/>
-							  <img src="img\Gaz66_6.png"/>
+							  <img src="img\gaz66_2.png"/>
+							  <img src="img\gaz66_1.png"/>
+							  <img src="img\gaz66_3.png"/>
+							  <img src="img\gaz66_4.png"/>
+							  <img src="img\gaz66_5.png"/>
+							  <img src="img\gaz66_6.png"/>
 							  </div>
 							  </div>
 							</div>
