--- a/index_uaz.html
+++ b/index_uaz.html
@@ -82,6 +82,7 @@
 							  <input type="radio" name="kadoves" id="slaid6">
 							  <input type="radio" name="kadoves" id="slaid7">
 							  <input type="radio" name="kadoves" id="slaid8">
+							  <input type="radio" name="kadoves" id="slaid9">
 							   
 							  <div class="kadoves">
 							  <label for="slaid1"></label>
@@ -92,18 +93,20 @@
 							  <label for="slaid6"></label>
 							  <label for="slaid7"></label>
 							  <label for="slaid8"></label>
+							  <label for="slaid9"></label>
 							  </div>
 							   
 							  <div class="adaptivny-slayder-lasekun">
 							  <div class="abusteku-deagulus">
 							  <img src="img\Uaz_2.png"/>
-							  <img src="img\Uaz_1.png"/>
+							  <img src="img\Uaz_9.png"/>
 							  <img src="img\Uaz_3.png"/>
 							  <img src="img\Uaz_4.png"/>
 							  <img src="img\Uaz_5.png"/>
 							  <img src="img\Uaz_6.png"/>
 							  <img src="img\Uaz_7.png"/>
 							  <img src="img\Uaz_8.png"/>
+							  <img src="img\Uaz_1.png"/>
 							  </div>
 							  </div>
 							</div>
