--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="article-previews">
 				<div class="corner-box-6">
 				<div class="corner-ribbon-6 corner-ribbon-6-top-left">
-					<span>30$</span>
+					<span>Repack-30$</span>
 				</div>
                     <a href="index_uaz.html">
                         <div class="article-preview">
@@ -73,7 +73,7 @@
 				</div>
 				<div class="corner-box-6">
 				<div class="corner-ribbon-6 corner-ribbon-6-top-left">
-					<span>30$</span>
+					<span>Repack-30$</span>
 				</div>
                     <a href="index_Gaz66.html">
                         <div class="article-preview">
@@ -87,7 +87,7 @@
 				</div>
 				<div class="corner-box-6">
 				<div class="corner-ribbon-6 corner-ribbon-6-top-left">
-					<span>50$</span>
+					<span>Repack-50$</span>
 				</div>
                     <a href="index_Gaz77.html">
                         <div class="article-preview">
