--- a/index_Gaz66.html
+++ b/index_Gaz66.html
@@ -130,7 +130,7 @@
 									</a>										
 								</div>
 							<hr>
-							<center><h3 style="color:green">To find out more about this car, write to me in ls in discord.</h3><h2>Price:30$</h2>
+							<center><h3 style="color:green">To find out more about this car, write to me in pm in discord.</h3><h2>Price:30$</h2>
 							<hr>
 						</p>
 					</div>
