--- a/index_ru.html
+++ b/index_ru.html
@@ -59,7 +59,7 @@
                 <div class="article-previews">
 				<div class="corner-box-6">
 				<div class="corner-ribbon-6 corner-ribbon-6-top-left">
-					<span>2000 руб</span>
+					<span>репак-2000руб</span>
 				</div>
                     <a href="index_uaz_ru.html">
                         <div class="article-preview">
@@ -73,7 +73,7 @@
 				</div>
 				<div class="corner-box-6">
 				<div class="corner-ribbon-6 corner-ribbon-6-top-left">
-					<span>2000 руб</span>
+					<span>репак-2000руб</span>
 				</div>
                     <a href="index_Gaz66_ru.html">
                         <div class="article-preview">
@@ -87,7 +87,7 @@
 				</div>
 				<div class="corner-box-6">
 				<div class="corner-ribbon-6 corner-ribbon-6-top-left">
-					<span>3500 руб</span>
+					<span>репак-3500руб</span>
 				</div>
                     <a href="index_Gaz77_ru.html">
                         <div class="article-preview">
