--- a/index_Gaz77.html
+++ b/index_Gaz77.html
@@ -135,7 +135,7 @@
 									</a>										
 								</div>
 							<hr>
-							<center><h3 style="color:green">To find out more about this car, write to me in pm in discord.</h3><h2>Price:50$</h2>
+							<center><h3 style="color:green">To find out more about this car, write to me in pm in discord.</h3>
 							<hr>
 						</p>
 					</div>
