--- a/index_Gaz77_ru.html
+++ b/index_Gaz77_ru.html
@@ -135,7 +135,7 @@
 									</a>										
 								</div>
 							<hr>
-							<center><h3 style="color:green">Что-бы узнать об этой машинке подробнее напишите мне в лс в дисскорде.</h3><h2>Цена:3500руб</h2>
+							<center><h3 style="color:green">Что-бы узнать об этой машинке подробнее напишите мне в лс в дисскорде.</h3>
 							<hr>
 						</p>
 					</div>
