--- a/index_ru.html
+++ b/index_ru.html
@@ -48,7 +48,7 @@
         <div id="footer">
             <div class="container">
                 <div style="color:#DC143C;">
-					Вы можете относиться к моему контенту как хотите, это ваше дело. Но более 80% модов в мастерской - сраное дерьмо. Не поддерживайте таких авторов, которые клепают свои моды на коленке и делают моды на конвеере. Поддерживайте качественный контент. <3
+					Вы можете относиться к моему контенту как хотите, это ваше дело. Но более 80% модов в мастерской - сраное дерьмо. Не поддерживайте таких авторов, которые клепают свои моды на коленке и делают их как на конвеере. Поддерживайте качественный контент. <3
                 </div>
             </div>
         </div><br>
