--- a/types.html
+++ b/types.html
@@ -58,6 +58,18 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
+								<center><h1>Bastard_CJ7</h1></center>
+								<div style="font-size:15px;">
+									<a style="padding-left:20%;" href="https://pastebin.com/N0ZKtsSH"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+								</div>
+							</div>
+						</div>	
+					</div>
+					<hr>
+					<div class="content">
+						<div id="footer">
+							<div class="container">
 								<center><h1>Bastard_Rover</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-left:20%;" href="https://pastebin.com/ZkDwFWn3"><i class="fa fa-download"></i><span>Types</span></a>
