--- a/types.html
+++ b/types.html
@@ -63,10 +63,10 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<center><h1>Bastard_CJ7</h1></center>
+								<img src="img/work/cj7.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_CJ7</h1></center>
 								<div style="font-size:15px;">
-									<a style="padding-left:20%;" href="https://pastebin.com/N0ZKtsSH"><i class="fa fa-download"></i><span>Types</span></a>
-									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+									<a style="padding-right:10%;" href="https://pastebin.com/N0ZKtsSH"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
 								</div>
 							</div>
 						</div>	
@@ -75,10 +75,10 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<center><h1>Bastard_Rover</h1></center>
+								<img src="img/work/rover.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Rover</h1></center>
 								<div style="font-size:15px;">
-									<a style="padding-left:20%;" href="https://pastebin.com/ZkDwFWn3"><i class="fa fa-download"></i><span>Types</span></a>
-									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+									<a style="padding-right:10%;" href="https://pastebin.com/ZkDwFWn3"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
 								</div>
 							</div>
 						</div>	
@@ -87,10 +87,10 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<center><h1>Bastard_W124</h1></center>
+								<img src="img/work/w124.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W124</h1></center>
 								<div style="font-size:15px;">
-									<a style="padding-left:20%;" href="https://pastebin.com/GS3gSSD6"><i class="fa fa-download"></i><span>Types</span></a>
-									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+									<a style="padding-right:10%;" href="https://pastebin.com/GS3gSSD6"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
 								</div>
 							</div>
 						</div>	
@@ -99,10 +99,10 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<center><h1>Bastard_W123</h1></center>
+								<img src="img/work/w123.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W123</h1></center>
 								<div style="font-size:15px;">
-									<a style="padding-left:20%;" href="https://pastebin.com/XFhMVMLm"><i class="fa fa-download"></i><span>Types</span></a>
-									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+									<a style="padding-right:10%;" href="https://pastebin.com/XFhMVMLm"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
 								</div>
 							</div>
 						</div>	
@@ -111,10 +111,10 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<center><h1>Bastard_Bmw_e32</h1></center>
+								<img src="img/work/E32.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Bmw_e32</h1></center>
 								<div style="font-size:15px;">
-									<a style="padding-left:20%;" href="https://pastebin.com/R9vZJiU0"><i class="fa fa-download"></i><span>Types</span></a>
-									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2490982198"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+									<a style="padding-right:10%;" href="https://pastebin.com/R9vZJiU0"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2490982198"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
 								</div>
 							</div>
 						</div>	
@@ -127,10 +127,10 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<center><h1>bastard.info_Uaz31514</h1></center>
+								<img src="img/work/UAZ.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_Uaz31514</h1></center>
 								<div style="font-size:15px;">
-									<a style="padding-left:20%;" href="https://pastebin.com/c0p1vNhZ"><i class="fa fa-download"></i><span>Types</span></a>
-									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606309189"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+									<a style="padding-right:10%;" href="https://pastebin.com/c0p1vNhZ"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606309189"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
 								</div>
 							</div>
 						</div>	
@@ -139,10 +139,10 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<center><h1>bastard.info_shihiga</h1></center>
+								<img src="img/work/GAZ66.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_shihiga</h1></center>
 								<div style="font-size:15px;">
-									<a style="padding-left:20%;" href="https://pastebin.com/V9JPkr0R"><i class="fa fa-download"></i><span>Types</span></a>
-									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606307753"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+									<a style="padding-right:10%;" href="https://pastebin.com/V9JPkr0R"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606307753"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
 								</div>
 							</div>
 						</div>	
@@ -151,10 +151,10 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<center><h1>bastard.info_gaz71</h1></center>
+								<img src="img/work/GAZ71.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_gaz71</h1></center>
 								<div style="font-size:15px;">
-									<a style="padding-left:20%;" href="https://pastebin.com/XZDTMkpL"><i class="fa fa-download"></i><span>Types</span></a>
-									<a style="padding-left:20%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606305741"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+									<a style="padding-right:10%;" href="https://pastebin.com/XZDTMkpL"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606305741"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
 								</div>
 							</div>
 						</div>	
