--- a/index_humvee_ru.html
+++ b/index_humvee_ru.html
@@ -97,12 +97,12 @@
 						<div class="containerSkins">
 							<div class="cards-list-wrap">
 								<ul class="cards-list">
-									<li class="cards-list__item" style="background-image: url(img/skins/h_1.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/skins/h_2.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/skins/h_3.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/skins/h_4.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/skins/h_5.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/skins/h_6.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/h_1.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/h_2.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/h_3.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/h_4.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/h_5.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/h_6.png);"></li>
 								</ul>
 							</div>
 						</div>
