--- a/index_Gaz66_ru.html
+++ b/index_Gaz66_ru.html
@@ -101,13 +101,13 @@
 						<div class="containerSkins">
 							<div class="cards-list-wrap">
 								<ul class="cards-list">
-									<li class="cards-list__item" style="background-image: url(img/Skins/soon.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/Skins/soon.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/Skins/soon.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/Skins/soon.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/Skins/soon.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/Skins/soon.png);"></li>
-									<li class="cards-list__item" style="background-image: url(img/Skins/soon.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/Soon.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/Soon.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/Soon.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/Soon.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/Soon.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/Soon.png);"></li>
+									<li class="cards-list__item" style="background-image: url(img/Skins/Soon.png);"></li>
 								</ul>
 							</div>
 						</div>
