--- a/types_ru.html
+++ b/types_ru.html
@@ -63,7 +63,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/work/cj7.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_CJ7</h1></center>
+								<img src="img/Work/cj7.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_CJ7</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/N0ZKtsSH"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -75,7 +75,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/work/rover.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Rover</h1></center>
+								<img src="img/Work/rover.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Rover</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/ZkDwFWn3"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -87,7 +87,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/work/w124.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W124</h1></center>
+								<img src="img/Work/w124.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W124</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/GS3gSSD6"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -99,7 +99,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/work/w123.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W123</h1></center>
+								<img src="img/Work/w123.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W123</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/XFhMVMLm"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -111,7 +111,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/work/E32.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Bmw_e32</h1></center>
+								<img src="img/Work/E32.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Bmw_e32</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/R9vZJiU0"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2490982198"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -127,7 +127,19 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/work/UAZ.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_Uaz31514</h1></center>
+								<img src="img/Work/HUMVEE.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_Humvee</h1></center>
+								<div style="font-size:15px;">
+									<a style="padding-right:10%;" href="https://pastebin.com/Aa6BKJrC"><i class="fa fa-download"></i><span>Тайпсы</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2639345121"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
+								</div>
+							</div>
+						</div>	
+					</div>
+					<hr>
+					<div class="content">
+						<div id="footer">
+							<div class="container">
+								<img src="img/Work/UAZ.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_Uaz31514</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/c0p1vNhZ"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606309189"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -139,7 +151,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/work/GAZ66.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_shihiga</h1></center>
+								<img src="img/Work/GAZ66.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_shihiga</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/V9JPkr0R"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606307753"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -151,7 +163,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/work/GAZ71.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_gaz71</h1></center>
+								<img src="img/Work/GAZ71.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_gaz71</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/XZDTMkpL"><i class="fa fa-download"></i><span>Types</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2606305741"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
