--- a/types_ru.html
+++ b/types_ru.html
@@ -63,7 +63,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/Work/cj7.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_CJ7</h1></center>
+								<img src="img/Work/CJ7.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_CJ7</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/N0ZKtsSH"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -75,7 +75,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/Work/rover.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Rover</h1></center>
+								<img src="img/Work/ROVER.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Rover</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/ZkDwFWn3"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -87,7 +87,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/Work/w124.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W124</h1></center>
+								<img src="img/Work/W124.jpg" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W124</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/GS3gSSD6"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
@@ -99,7 +99,7 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
-								<img src="img/Work/w123.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W123</h1></center>
+								<img src="img/Work/W123.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_W123</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/XFhMVMLm"><i class="fa fa-download"></i><span>Тайпсы</span></a>
 									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
