--- a/faq.html
+++ b/faq.html
@@ -38,7 +38,7 @@
 					<a href="https://discord.gg/tBqFQQh85s"><i class="fab fa-discord"></i><span>Discord</span></a>
 					<a href="https://www.youtube.com/channel/UCRq8TdYzxTKkcO_j6LLmFhg"><i class="fab fa-youtube"></i><span>Youtube</span></a>
 					<a href="types.html"><i class="fa fa-database"></i><span>Types</span></a>
-					<a href="faq.html"><i class="fa fa-exclamation-triangle"></i><span>FAQ</span></a>
+					<a href="faq.html" style="color:red;"><i class="fa fa-exclamation-triangle"></i><span>FAQ</span></a>
                 </div>
             </div>
         </div>
