--- a/types_ru.html
+++ b/types_ru.html
@@ -130,6 +130,18 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
+								<img src="img/Work/G55.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_g55</h1></center>
+								<div style="font-size:15px;">
+									<a style="padding-right:10%;" href="https://pastebin.com/SySuDRjJ"><i class="fa fa-download"></i><span>Тайпсы</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2772041476"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
+								</div>
+							</div>
+						</div>	
+					</div>
+					<hr>
+					<div class="content">
+						<div id="footer">
+							<div class="container">
 								<img src="img/Work/BRDM.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_brdm</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/h0uKBNYB"><i class="fa fa-download"></i><span>Тайпсы</span></a>
