--- a/types_ru.html
+++ b/types_ru.html
@@ -66,6 +66,18 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
+								<img src="img/Work/T1.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_Truck_T1</h1></center>
+								<div style="font-size:15px;">
+									<a style="padding-right:10%;" href="https://pastebin.com/yBWUdABy"><i class="fa fa-download"></i><span>Тайпсы</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2813502149"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
+								</div>
+							</div>
+						</div>	
+					</div>
+					<hr>
+					<div class="content">
+						<div id="footer">
+							<div class="container">
 								<img src="img/Work/CJ7.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>Bastard_CJ7</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/N0ZKtsSH"><i class="fa fa-download"></i><span>Тайпсы</span></a>
@@ -126,6 +138,18 @@
 					
 					<center><h1>Приватные моды</h1></center>
 					
+					<hr>
+					<div class="content">
+						<div id="footer">
+							<div class="container">
+								<img src="img/Work/ZAZIK.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_zazik</h1></center>
+								<div style="font-size:15px;">
+									<a style="padding-right:10%;" href="https://pastebin.com/S6kdpQ0C"><i class="fa fa-download"></i><span>Тайпсы</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2791334450"><i class="fab fa-steam-symbol"></i><span>Ссылка</span></a>
+								</div>
+							</div>
+						</div>	
+					</div>
 					<hr>
 					<div class="content">
 						<div id="footer">
