--- a/types.html
+++ b/types.html
@@ -142,6 +142,18 @@
 					<div class="content">
 						<div id="footer">
 							<div class="container">
+								<img src="img/Work/UAZ452.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_uaz452</h1></center>
+								<div style="font-size:15px;">
+									<a style="padding-right:10%;" href="https://pastebin.com/4kn96cY5"><i class="fa fa-download"></i><span>Types</span></a>
+									<a style="padding-right:10%;" href="https://steamcommunity.com/sharedfiles/filedetails/?id=2828302680"><i class="fab fa-steam-symbol"></i><span>Link</span></a>
+								</div>
+							</div>
+						</div>	
+					</div>
+					<hr>
+					<div class="content">
+						<div id="footer">
+							<div class="container">
 								<img src="img/Work/ZAZIK.png" style="width:15%;border-radius:4px;box-shadow: 0 0 7px #666;margin-right:10px;"><center><h1>bastard.info_zazik</h1></center>
 								<div style="font-size:15px;">
 									<a style="padding-right:10%;" href="https://pastebin.com/S6kdpQ0C"><i class="fa fa-download"></i><span>Types</span></a>
