--- a/index_ru.html
+++ b/index_ru.html
@@ -28,7 +28,7 @@
 		<center>
         <div id="cover" class="layout-">
             <div class="container">
-			<a href="index_ru.html"><img style="height:30%;" src="img\logo.gif"/></a>
+			<a href="index_ru.html"><img style="height:150px;" src="img\logo.gif"/></a>
 			<span>
 			<br>
 			</span><br>
