--- a/faq_ru.html
+++ b/faq_ru.html
@@ -28,7 +28,7 @@
 		<center>
         <div id="cover" class="layout-">
             <div class="container">
-			<a href="index.html"><img style="height:30%;" src="img\logo.gif"/></a>
+			<a href="index.html"><img style="height:150px;" src="img\logo.gif"/></a>
 			<span>
 			<br>
 			</span><br>
@@ -148,7 +148,7 @@
                 </div>
             </div>
             <div class="container">
-				<a href="index.html"><img style="height:30%;" src="img\znak.png"/></a>
+				<a href="index.html"><img style="height:150px;" src="img\znak.png"/></a>
             </div>
 		</div>
 		<div id="footer">
