--- a/types_ru.html
+++ b/types_ru.html
@@ -38,7 +38,7 @@
 					<a href="https://discord.gg/tBqFQQh85s"><i class="fab fa-discord"></i><span>Дискорд</span></a>
 					<a href="https://www.youtube.com/channel/UCRq8TdYzxTKkcO_j6LLmFhg"><i class="fab fa-youtube"></i><span>Ютуб</span></a>
 					<a href="types_ru.html"><i class="fa fa-database"></i><span>Тайпсы</span></a>
-					<a href="faq_ru.html" style="color:red;"><i class="fa fa-exclamation-triangle"></i><span>FAQ</span></a>
+					<a href="faq_ru.html" style="color:red;"><i class="fa fa-exclamation-triangle"></i><span>Правила</span></a>
                 </div>
             </div>
         </div>
