--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					<div class="corner-ribbon-6 corner-ribbon-6-top-left">
 						<span>70$</span>
 					</div>
-						<a href="#">
+						<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2877724283">
 							<div class="article-preview">
 								<img class="fill" src="img\work10.png"/>
 								<div class="info">
