--- a/index_ru.html
+++ b/index_ru.html
@@ -73,7 +73,7 @@
 					<div class="corner-ribbon-6 corner-ribbon-6-top-left">
 						<span>5000руб</span>
 					</div>
-						<a href="#">
+						<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2877724283">
 							<div class="article-preview">
 								<img class="fill" src="img\work10.png"/>
 								<div class="info">
