--- a/index_ru.html
+++ b/index_ru.html
@@ -55,18 +55,28 @@
                 </div>
             </div>
         </div><br>
-
+		
         <div id="footer">
             <div class="container">
-                <div style="color:#7289da;">
-					<i class="fab fa-discord"></i> Если у вас есть вопросы, то можете написать мне в дискорд Bastard#9137.
+                <div>
+				
+								<center><h2>Бесплатный Контент.</h2><br><center>
+								<div>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;" src="img\work\CJ7.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;" src="img\work\ROVER.jpg"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2813502149"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;" src="img\work\T1.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;" src="img\work\W123.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;" src="img\work\W124.jpg"/></a>
+								</div>
+								<br>
+
                 </div>
             </div>
-        </div>
-		
+        </div><br>
 		
         <div id="front-content" class="container">
             <div class="section" id="projects">
+				<center><h3>Платный Контент.</h3><br><center>
                 <div class="article-previews">
 				
 					<div class="corner-box-6">
@@ -223,6 +233,13 @@
             </div>
         </div>
 		
+        <div id="footer">
+            <div class="container">
+                <div style="color:#7289da;">
+					<i class="fab fa-discord"></i> Если у вас есть вопросы, то можете написать мне в дискорд Bastard#9137.
+                </div>
+            </div>
+        </div><br>
 		
         <div id="footer">
             <div class="container">
