--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 				
 								<center><h2> Public Free Content.</h2><br><center>
 
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img/work/CJ7.png"/></a>
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img/work/ROVER.jpg"/></a>
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2813502149"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img/work/T1.png"/></a>
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img/work/W123.png"/></a>
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img/work/W124.jpg"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\CJ7.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\ROVER.jpg"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2813502149"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\T1.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\W123.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><img class="fill" style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\W124.jpg"/></a>
 
 								<br>
 
