--- a/index_ru.html
+++ b/index_ru.html
@@ -62,11 +62,11 @@
 				
 								<center><h2>Бесплатный Контент.</h2><br><center>
 
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\CJ7.png"/></a>
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\ROVER.jpg"/></a>
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2813502149"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\T1.png"/></a>
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\W123.png"/></a>
-									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\work\W124.jpg"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2621304041"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\free_CJ7.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2498281654"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\free_ROVER.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2813502149"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\free_T1.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2554149041"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\free_W123.png"/></a>
+									<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2523090264"><img style="height:155px; border-radius: 4px; margin:5px;box-shadow: 0 0 7px #666;" src="img\free_W124.png"/></a>
 
 								<br>
 
