--- a/test.html
+++ b/test.html
@@ -1,12 +1,9 @@
 <html lang="en">
 <head>
+<meta http-equiv="refresh" content="0;URL=https://bastard.site" />
+<head>
+<title>Отличная статья ебать</title>
 </head>
 <body>
-<p>
-  <a href="https://www.mozilla.org/ru/"
-     title="Лучшее место для поиска дополнительной информации
-     о миссии Mozilla и о том, как внести свой вклад">
-  </a>.
-</p>
 </body>
 </html>
