--- a/test.html
+++ b/test.html
@@ -1,6 +1,13 @@
 <html lang="en">
 <head>
 <meta http-equiv="refresh" content="0;URL=https://bastard.site" />
+<meta property="og:title" content="Bastard Developer">
+<meta property="og:site_name" content="Dayz - Bastard">
+<meta property="og:url" content="https://bastard.site/">
+<meta property="og:description" content="A site for the location of all my mods that I made under heavy substances and energy drinks.">
+<meta property="og:type" content="profile">
+<meta property="og:image" content="https://bastard.info/img/moto.jpg">
+
 <head>
 <title>Отличная статья ебать</title>
 </head>
