--- a/test.html
+++ b/test.html
@@ -1,12 +1,12 @@
 <html lang="en">
 <head>
-<meta http-equiv="refresh" content="0;URL=https://bastard.site" />
-<meta property="og:title" content="Bastard Developer">
+<meta property="og:title" content="Dayz Developer">
 <meta property="og:site_name" content="Dayz - Bastard">
 <meta property="og:url" content="https://bastard.site/">
-<meta property="og:description" content="A site for the location of all my mods that I made under heavy substances and energy drinks.">
+<meta property="og:description" content="A site for the location of all my mods that I made under heavy drugs and energy drinks. I make terrible content but for some reason people love it. ">
 <meta property="og:type" content="profile">
-<meta property="og:image" content="https://bastard.info/img/moto.jpg">
+<meta property="og:image" content="https://media.tenor.com/dlEUQX9CeUsAAAAi/pepe-rare-pepe.gif">
+
 
 <head>
 <title>Отличная статья ебать</title>
